Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29684

Testing and improving 'cluster conflict resolving' with 10.4 and later

    XMLWordPrintable

Details

    Description

      There are a number of bug reports of cluster wide conflict resolving related crashes or hangs. To troubleshoot these, it would be good to run generic cluster conflict tests, just for easier reproducing of the issue(s).

      Run high intensity write-write conflict load in the cluster, with varying SQL access patterns.
      Also, some mtr tests exercising high priority victim aborting, appear to be disabled in 10.4. Enable these and fix the test if it appears to be non-deterministic.

      Analyze and troubleshoot issues surfacing from the testing.

      Attachments

        1. all_bt_28102022.txt
          116 kB
        2. bt_all_v2.txt
          117 kB
        3. bt_all.txt
          115 kB
        4. mysql.err
          1.02 MB
        5. new.err
          1.21 MB
        6. oltp_and_ddl_v1.yy
          4 kB
        7. oltp_and_ddl_v2.yy
          3 kB
        8. oltp.zz
          2 kB

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              seppo Seppo Jaakola
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5d Original Estimate - 5d
                  5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 11d 5h
                  11d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.