storage/innobase/handler/ha_innodb.cc
@@ -18711,6 +18711,13 @@ wsrep_kill_victim(
       victim_trx->lock.was_chosen_as_deadlock_victim= TRUE;
       lock_cancel_waiting_and_release(wait_lock);
     }
+  } else {
+    wsrep_thd_LOCK(thd);
+    victim_trx->lock.was_chosen_as_wsrep_victim= false;
+    wsrep_thd_set_wsrep_aborter(NULL, thd);
+    wsrep_thd_UNLOCK(thd);
+
+    WSREP_DEBUG("wsrep_thd_bf_abort has failed, victim will survive");
   }
 
   DBUG_VOID_RETURN;
